SERVER-94839 Fix underflow in window function memory tracker (#27113)

GitOrigin-RevId: e2a9bef5b416f78a741f66a68df8f4d9c4d08716