src/mongo/db/pipeline/window_function/window_function_add_to_set.h
@@ -59,7 +59,7 @@ public:
         auto iter = _values.find(std::move(value));
         tassert(
             5423800, "Can't remove from an empty WindowFunctionAddToSet", iter != _values.end());
-        _memUsageBytes -= iter->getApproximateSize();
+        decreaseMemUsageBytes(iter->getApproximateSize());
         _values.erase(iter);
     }
 
